# EECS-565

./: README.md
mp1/: .gitignore  Cargo.toml  Makefile  REPORT.md  mp1.cabal
mp1/app/: Main.hs
mp1/src/: main.rs
