cabal-version:      3.0
name:               mp1
version:            0.1.0.0
-- synopsis:
-- description:
-- license:            MIT
-- license-file:       LICENSE
author:             Cody Duong
maintainer:         duongcody507@gmail.com
-- copyright:
build-type:         Simple
-- extra-doc-files: CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable mp1
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1,
                      containers >=0.5,
                      text >=1.2,
                      vector >=0.12,
                      deepseq >=1.4,
                      async >=2.2,
                      stm >=2.5
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -O2 -threaded -rtsopts
